[NWPS-1426] - Fixed issue with first active item on mobile

--- a/app/assets/hee/blocks/content/main/training-journey/_training-journey.scss
+++ b/app/assets/hee/blocks/content/main/training-journey/_training-journey.scss
@@ -71,6 +71,8 @@
 
     // First and active journey item to appear within group.
     &.active.first {
+      @include nhsuk-responsive-padding(3, 'bottom');
+
       .hee-training-journey__item__link {
         &:before {
           top: nhsuk-spacing(3) * -1;
